finished the proposal and submitted to the learning mall

--- a/avocado_pred.Rmd
+++ b/avocado_pred.Rmd
@@ -84,13 +84,13 @@ ggplot(df, aes(x=average_price, fill=type))+
   scale_fill_brewer(palette = "Set2")
 ```
 
-### Create a matrix to demonstrate the volume of conventional and organic avocadoes
+### Create a matrix to demonstrate the volume of conventional and organic avocados
 ```{r}
 library(dplyr)
 vol_type <- df %>% group_by(type) %>% summarise(average_volume = round(mean(total_volume),3),average_price = round(mean(average_price),3)) %>% mutate(volume_percent= round(prop.table(average_volume)*100,3))
 vol_type
 ```
-**As can be seen from the density plot and the table in avocadoes.** <br>
+**As can be seen from the density plot and the table in avocados.** <br>
 - there are two types of avocado: organic and conventional  <br>
 - organic avocado share a small percent (3.2%) of volume but has a high price (1.62)  <br>
 - conventional avocado share a large percent (96.8) of volume but has a relative low price (1.16) <br>
@@ -119,7 +119,7 @@ df %>% select(date, average_price, type) %>%
 
 
 ```{r}
-
+levels(df$geography)
 ```
 
 
